# sage-agent

./: ptz_gateway_mcp.py  pyproject.toml  requirements-argo.txt  requirements-vision.txt  requirements.txt
config/: agentic_test_cases.yaml  argo_proxy.local.yaml.example  default.yaml  dgx_spark.yaml  example.yaml  local.yaml  ssh_config.example
docs/: node-setup.md
ptz_node/: __init__.py  __main__.py  api_server.py  bootstrap.py  cli.py  config_loader.py  debug_report.py  graph_runner.py  langchain_tools.py  llm_factory.py  paths.py  test_runner.py
ptz_node/self_healing/: __init__.py  guard.py  healer.py  notify.py  snapshot.py
ptz_node/sensor_gateway/: __init__.py  base.py  registry.py
ptz_node/sensor_gateway/drivers/: __init__.py  msa_sensor.py  ptz_camera.py
ptz_node/skills/: __init__.py  base.py  demo_workflows.py  registry.py  self_diagnosis.py  sensor_discovery.py
scripts/: activate_venv.sh  argo_proxy_setup.py  bootstrap_python311.sh  local_dev.sh  setup_argo_proxy.sh  sync_to_spark.sh  vendor_ptz_agent.sh
